Use the correct area for computing the gradient image for 'background-position: fixed' gradients.  (Bug 509681)  r=roc